--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
 
     <style>
         :root {
-            --bg: #0f1020;
-            --card: #181a2e;
-            --panel: #f9f5ff;
-            --accent: #ff9f9a;
+            /* Spotify‑ish dark + green accent */
+            --bg: #050814;
+            --card: #111320;
+            --panel: #f8f7ff;
+            --accent: #1db954;
+            --accent-soft: #2ddf7e;
             --accent-strong: #7c5cff;
             --text-main: #111321;
-            --text-soft: #4b4d63;
+            --text-soft: #b3b6d6;
             --text-invert: #ffffff;
-            --border-subtle: rgba(12, 14, 35, 0.08);
-            --shadow-soft: 0 18px 45px rgba(3, 7, 30, 0.55);
-            --radius-lg: 18px;
-            --radius-md: 12px;
-            --radius-sm: 999px;
+            --border-subtle: rgba(12, 14, 35, 0.18);
+            --shadow-soft: 0 22px 55px rgba(0, 0, 0, 0.75);
+            --radius-lg: 22px;
+            --radius-md: 14px;
+            --radius-pill: 999px;
         }
 
         * {
@@ -34,7 +36,7 @@
         body {
             margin: 0;
             font-family: -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
-            background: radial-gradient(circle at top, #2b2b58 0, #0f1020 45%, #050614 100%);
+            background: radial-gradient(circle at top, #1b1f3a 0, #050814 45%, #02030a 100%);
             color: var(--text-invert);
             height: 100vh;
             display: flex;
@@ -52,13 +54,13 @@
             }
 
         header {
-            padding: 10px 16px;
+            padding: 10px 18px;
             margin-bottom: 8px;
-            border-radius: var(--radius-sm);
-            background: linear-gradient(120deg, rgba(255, 159, 154, 0.18), rgba(124, 92, 255, 0.35));
+            border-radius: var(--radius-pill);
+            background: linear-gradient(120deg, rgba(29,185,84,0.24), rgba(124,92,255,0.35));
             border: 1px solid rgba(248, 244, 255, 0.35);
-            backdrop-filter: blur(18px);
-            -webkit-backdrop-filter: blur(18px);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
             font-size: 0.9rem;
             text-align: center;
             letter-spacing: 0.08em;
@@ -68,10 +70,10 @@
 
         .controls {
             padding: 10px;
-            background: rgba(7, 9, 29, 0.85);
+            background: rgba(8, 10, 26, 0.95);
             border-radius: var(--radius-lg);
-            border: 1px solid rgba(110, 120, 255, 0.22);
-            box-shadow: 0 14px 35px rgba(0, 0, 0, 0.55);
+            border: 1px solid rgba(72, 82, 160, 0.55);
+            box-shadow: var(--shadow-soft);
             display: flex;
             flex-wrap: wrap;
             gap: 8px;
@@ -83,27 +85,27 @@
                 flex: 1 1 30%;
                 min-width: 96px;
                 border: none;
-                border-radius: var(--radius-sm);
+                border-radius: var(--radius-pill);
                 padding: 9px 12px;
                 font-size: 0.9rem;
-                background: rgba(249, 245, 255, 0.06);
+                background: rgba(249, 245, 255, 0.04);
                 color: #f5f2ff;
                 display: inline-flex;
                 align-items: center;
                 justify-content: center;
                 gap: 6px;
-                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.45);
+                box-shadow: 0 10px 24px rgba(0, 0, 0, 0.55);
             }
 
                 .controls button.primary {
-                    background: linear-gradient(135deg, var(--accent) 0%, var(--accent-strong) 100%);
-                    color: #1b1020;
+                    background: linear-gradient(135deg, #f050ff 0%, #7c5cff 55%, #1db954 100%);
+                    color: #120619;
                     font-weight: 600;
                 }
 
                 .controls button:active {
                     transform: translateY(1px) scale(0.99);
-                    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.6);
+                    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.7);
                 }
 
             .controls .speed-wrap {
@@ -117,7 +119,7 @@
 
             .controls input[type="range"] {
                 flex: 1;
-                accent-color: var(--accent-strong);
+                accent-color: var(--accent);
             }
 
         /* Collapsible settings panel */
@@ -135,6 +137,7 @@
 
         #toggleSettingsBtn {
             flex: 1 1 100%;
+            background: rgba(32, 37, 80, 0.8);
         }
 
         .main {
@@ -163,8 +166,8 @@
         .viewer-wrapper {
             flex: 1;
             border-radius: var(--radius-lg);
-            border: 1px solid rgba(255, 255, 255, 0.12);
-            background: radial-gradient(circle at top left, rgba(255, 159, 154, 0.12), rgba(124, 92, 255, 0.26)), linear-gradient(145deg, #090b20 0%, #050615 100%);
+            border: 1px solid rgba(72, 82, 160, 0.6);
+            background: radial-gradient(circle at top left, rgba(29,185,84,0.22), rgba(124, 92, 255, 0.45)), linear-gradient(145deg, #050814 0%, #02030a 100%);
             overflow: hidden;
             position: relative;
             box-shadow: var(--shadow-soft);
@@ -181,7 +184,7 @@
             font-size: 1.35rem;
             line-height: 1.45;
             color: #fdf7ff;
-            text-shadow: 0 2px 8px rgba(0, 0, 0, 0.75);
+            text-shadow: 0 2px 8px rgba(0, 0, 0, 0.9);
         }
 
         .footer {
@@ -232,6 +235,11 @@
             body.gig-mode .controls {
                 background: #050505;
             }
+
+        /* Simple hidden helper */
+        .hidden {
+            display: none !important;
+        }
     </style>
 </head>
 <body>
@@ -241,23 +249,18 @@
         · Smooth Lyric Scroller
     </header>
 
-    <!--
-    <div id="ad-slot-top">
-      Ad space · 320×50 (reserved)
-    </div>
-    -->
-
     <div class="controls">
         <!-- Always visible -->
         <button id="copyToViewer">Load Lyrics</button>
         <button id="start" class="primary">Start</button>
         <button id="pause">Pause</button>
+        <button id="resetBtn">Reset</button>
 
         <button id="toggleSettingsBtn">Show settings</button>
 
         <!-- Settings (hidden by default) -->
         <div id="settingsPanel">
-            <!-- Setlist chips -->
+            <!-- Setlist bar -->
             <div style="
             padding:6px 8px;
             border-radius:999px;
@@ -361,12 +364,6 @@
         </section>
     </main>
 
-    <!--
-    <div id="ad-slot-bottom">
-      Ad space · 320×100 (reserved)
-    </div>
-    -->
-
     <footer class="footer">
         <div style="margin-bottom:4px;">
             © 2026 LyricFlow • v1.0
@@ -389,6 +386,7 @@
         const copyBtn = document.getElementById("copyToViewer");
         const startBtn = document.getElementById("start");
         const pauseBtn = document.getElementById("pause");
+        const resetBtn = document.getElementById("resetBtn");
         const speedSlider = document.getElementById("speed");
         const speedValue = document.getElementById("speedValue");
 
@@ -501,9 +499,9 @@
                 chip.style.padding = "4px 10px";
                 chip.style.fontSize = "0.78rem";
                 chip.style.background = (id === currentId)
-                    ? "rgba(255,159,154,0.9)"
+                    ? "rgba(29,185,84,0.95)"
                     : "rgba(255,255,255,0.08)";
-                chip.style.color = (id === currentId) ? "#1b1020" : "#f7f4ff";
+                chip.style.color = (id === currentId) ? "#050814" : "#f7f4ff";
                 chip.style.whiteSpace = "nowrap";
 
                 chip.addEventListener("click", () => {
@@ -528,6 +526,7 @@
             currentTop = 0;
             viewer.style.top = "0px";
             autoResizeTextarea(editor);
+            editor.classList.remove("hidden");
         }
 
         function clearFields() {
@@ -539,6 +538,7 @@
             viewer.style.top = "0px";
             songSelect.value = "__new__";
             autoResizeTextarea(editor);
+            editor.classList.remove("hidden");
         }
 
         function upsertCurrentSong() {
@@ -614,10 +614,7 @@
             }, 400);
         }
 
-        titleInput.addEventListener("input", () => {
-            queueSave();
-        });
-
+        titleInput.addEventListener("input", queueSave);
         editor.addEventListener("input", () => {
             queueSave();
             autoResizeTextarea(editor);
@@ -632,6 +629,10 @@
             viewer.textContent = editor.value || "No lyrics loaded.";
             currentTop = 0;
             viewer.style.top = "0px";
+
+            // Hide editor after loading so you just see the lyric window
+            editor.classList.add("hidden");
+            viewer.parentElement.scrollIntoView({ behavior: "smooth", block: "center" });
         });
 
         function step(timestamp) {
@@ -665,6 +666,19 @@
 
         pauseBtn.addEventListener("click", () => {
             scrolling = false;
+        });
+
+        resetBtn.addEventListener("click", () => {
+            scrolling = false;
+            lastTime = null;
+            currentTop = 0;
+            viewer.style.top = "0px";
+            editor.value = "";
+            viewer.textContent = "";
+            editor.classList.remove("hidden");
+            songSelect.value = "__new__";
+            titleInput.value = "";
+            autoResizeTextarea(editor);
         });
 
         speedSlider.addEventListener("input", () => {
@@ -774,6 +788,9 @@
         function updateSettingsLabel() {
             const open = controls.classList.contains("settings-open");
             toggleSettingsBtn.textContent = open ? "Hide settings" : "Show settings";
+            if (open) {
+                editor.classList.remove("hidden");
+            }
         }
 
         toggleSettingsBtn.addEventListener("click", () => {
